--- a/data/projects.json
+++ b/data/projects.json
@@ -1,103 +1,34 @@
 [
   {
-    "title":"Sheetroom",
-    "description":"Assessment platform with a drag-and-drop quiz builder, embeddable graphs and formulas, and a customizable scoring algorithm",
-    "image":"project_images/sheetroom.jpg",
-    "href":"https://www.sheetroom.com",
+    "title":"Mochiday",
+    "description":"A website that fetches new jobs everyday so you can spend less time searching and more time applying",
+    "image":"project_images/mochiday.png",
+    "href":"https://mochiday.co",
     "stack": [
       "Typescript",
       "React",
       "Tailwind CSS",
       "Postgres",
-      "GraphQL",
-      "AWS Lambda",
-      "AWS S3",
-      "JWT Authentication",
-      "OAuth 2.0"
-    ]
-  },
-  {
-    "title":"Nelson Bot",
-    "description":"Serverless Python bot for automatically reserving your preferred time slots at the Brown Nelson Fitness Center",
-    "image":"project_images/nelsonbot.jpg",
-    "href":"https://github.com/nthnluu/nelsonbot",
-    "stack": [
+      "DaisyUI",
+      "Cloudflare Workers",
       "Python",
-      "Selenium",
-      "Docker",
-      "AWS Lambda"
+      "Node.js",
+      "Puppeteer"
     ]
   },
   {
-    "title":"RathDB",
-    "description":"Optimized storage system to serve as a database for distributed blockchain applications, such as a cryptocurrency",
-    "image":"project_images/rathdb.jpg",
-    "href":"https://github.com/nthnluu/rathDB",
+    "title":"Tractr",
+    "description":"A web app that helps keep track of your everyday tasks and habits",
+    "image":"project_images/tractor.png",
+    "href":"https://tractr.vercel.app",
     "stack": [
-      "C++",
-      "Protobuf",
-      "GoogleTest",
-      "CMake"
-    ]
-  },
-  {
-    "title":"Is it GG?",
-    "description":"Logistic regression machine learning model for predicting whether you won or lost a League game based on your current in-game stats",
-    "image":"project_images/isitgg.jpg",
-    "href":"https://github.com/nthnluu/is-it-gg",
-    "stack": [
-      "Python",
-      "Pandas",
-      "Numpy",
-      "Scikit Learn",
-      "Jupyter Notebook"
-    ]
-  },
-  {
-    "title":"Mixtape",
-    "description":"Discover new music and quickly create new Spotify playlists with songs you love through a Tinder-like interface",
-    "image":"project_images/mixtape.jpg",
-    "href":"https://mixtape.nthnluu.vercel.app",
-    "stack": [
-      "Typescript",
-      "Python",
+      "Tailwind CSS",
       "React",
-      "FastAPI",
-      "Material UI"
-    ]
-  },
-  {
-    "title":"Corporate Debt Rating Predictor",
-    "description":"Logistic regression model that predicts a company's debt rating based on financial report data",
-    "image":"project_images/corporatedeptpredictor.jpg",
-    "href":"https://colab.research.google.com/drive/1O7omfdR9nzbTEYGdlTmknoD83r4TSrOh?usp=sharing",
-    "stack": [
-      "Pandas",
-      "Python",
-      "Sklearn",
-      "Seaborn",
-      "Numpy"
-    ]
-  },
-  {
-    "title":"Venture at Brown",
-    "description":"Interactive guide to the entrepreneurial resources available to Brown and RISD students on College Hill",
-    "image":"project_images/ventureatbrown.jpg",
-    "href":"https://ventureatbrown.com/",
-    "stack": [
-      "Javascript",
-      "Tailwind CSS"
-    ]
-  },
-  {
-    "title":"BrunoCoin",
-    "description":"A proof-of-concept cryptocurrency miner and wallet written with GoLang. Based on the design described in the Bitcoin whitepaper.",
-    "image":"project_images/brunocoin.jpg",
-    "href":"https://github.com/nthnluu/BrunoCoin",
-    "stack": [
-      "GoLang",
-      "gRPC",
-      "uber-go/atomic"
+      "DaisyUI",
+      "Typescript",
+      "Postgres",
+      "Node.js"
     ]
   }
+  
 ]
